--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,16 @@
----
-layout: compress
----
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
-  <meta name=viewport content="width=device-width, initial-scale=1">
+<html>
+  <head>
+    {% include meta.html %}
+      <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
+      <script type="text/javascript">window.baseurl = '{{ site.url }}';</script>
+      {% include css.html %}
+  </head>
 
-  <meta name=description content="{{ site.bio }}">
-  <meta name=author content="{{ site.name }}">
-
-  {% seo %}
-
-  {% include favicon.html %}
-
-  <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
-
-  <style>
-    {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
-    {{ scss_sheet | scssify }}
-  </style>
-</head>
-<body>
-  {{ content }}
-</body>
+  <body class="home overflow-hidden">
+    {% include header.html %}
+    {% include main.html %}
+    {% include js.html %}
+    {% include analytics.html %}
+  </body>
 </html>
